--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="build/css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="build/css/styles.css" />
     <title>Vanilla</title>
-</head>
-<body>
-    <h1 class="text-6xl font-bold">Vanilla Boilerplate</h1>
-</body>
+  </head>
+  <body class="flex min-h-screen flex-col">
+    <header></header>
+    <main></main>
+    <footer class="mt-auto">
+      <p>&copy 2024 - Elikem Daniels</p>
+    </footer>
+  </body>
 </html>
